<resources>
    <string name="title_activity_introducao">introducaoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="button">Botão</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_carrinho">_Carrinho_ de apostas</string>
    <string name="title_activity_forma_pagamento">Forma de _pagamento_</string>
    <string name="title_activity_confirmacao_pagamento">_Confirmação_</string>
    <string name="title_activity_minhas_apostas">Minhas _apostas_</string>
    <string name="title_activity_dados_pessoais">_Dados Pessoais_</string>
    <string name="title_dados_pessoais">Dados Pessoais</string>
    <string name="loterias_caixa">Loterias Caixa</string>
    <string name="logo_caixa">Logo da Caixa</string>
    <string name="label_receber_notificacoes">Receber notificações</string>
    <string name="cadastro_atualizado_com_sucesso">
    Seu cadastro foi atualizado com sucesso.
</string>
    <string name="navigation_drawer_open">Menu principal</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="olausuario">Início menu principal</string>
    <string name="action_settings">Configurações</string>
    <string name="action_duvidas">Dúvidas</string>
    <string name="valorDessaAposta">Valor dessa\naposta</string>
    <string name="imagemCarrinho">Carrinho</string>
    <string name="carrinhoDeApostas">Carrinho \nde apostas</string>
    <string name="carrinho_apostas">Carrinho de Apostas</string>
    <string name="label_premio_estimado_concurso_numero">Pr\u00eamio estimado Concurso %d</string>
    <string name="label_premio_estimado_concurso_numero_bold">Pr\u00eamio estimado do concurso _%d_</string>
    <string name="label_premio_estimado">Pr\u00eamio estimado</string>
    <string name="escolhaOmes">_Escolha_\no m\u00eas de sorte</string>
    <string name="adicionarAoCarrinho">_Adicionar_\nao carrinho de apostas</string>
    <string name="limparAposta">Limpar aposta</string>
    <string name="label_limpar">Limpar</string>
    <string name="limparCarrinho">Limpar carrinho</string>
    <string name="completarCartela">_Completar_\ncom números aleatórios</string>
    <string name="completarBotao">Completar aleatoriamente</string>
    <string name="completar">Completar</string>
    <string name="aposta_aleatoria">Aposta aleatória</string>
    <string name="completar_jogo">Completar jogo</string>
    <string name="surpresinhaTitulo">Surpresinha</string>
    <string name="surpresinhaInfo">Na Surpresinha os números ficam\nmascarados até a efetivação da compra.</string>
    <string name="surpresinhaQtdInfo">Você ainda pode escolher quantas\nSurpresinhas quer apostar neste concurso.</string>
    <string name="surpresinhaInfoNova">Você ainda pode escolher quantos jogos Surpresinha quer apostar neste concurso:</string>
    <string name="surpresinhaTime">O time também entra na surpresa! Mas, se quiser, você pode escolher o seu favorito.</string>
    <string name="titulo_dialog">Titulo da dialog</string>
    <string name="cancelar">Cancelar</string>
    <string name="ajuda_dialog">Ajuda</string>
    <string name="salvar_carrinho">Salvar Carrinho</string>
    <string name="mensagem_ccompra_cancelada_dialog">Não foi possível concluir essa compra\ne sua aposta não foi efetivada.\n\nDeseja realizar uma nova tentativa\nde compra com o mesmo carrinho?</string>
    <string name="mensagem_compra_cancelada_dialog">Não foi possível concluir essa compra e sua aposta não foi efetivada. Você pode salvar esse mesmo carrinho para tentar novamente. Deseja salvar esta compra como carrinho favorito?</string>
    <string name="tenta_novamente_dialog">Tentar Novamente</string>
    <string name="ok">OK</string>
    <string name="label_sim">Sim</string>
    <string name="label_nao">Não</string>
    <string name="label_compra_valor">Compra %d</string>
    <string name="label_compra_lista_valor">_Total:_</string>
    <string name="label_compra_lista_situacao">Situação:</string>
    <string name="label_compra_lista_situacao_descricao">Situação: _%s_</string>
    <string name="label_compra_lista_processada_por">Compra processada por: _%s_</string>
    <string name="label_compra_lista_meio_de_pagamento">Meio de pagamento: _%s_</string>
    <string name="label_compra_lista_alterar_compra">Alterar Compra</string>
    <string name="label_compra_lista_tentar_novamente">Tentar Novamente</string>
    <string name="label_atencao">Atenção</string>
    <string name="label_atencao_exclama">Atenção!</string>
    <string name="tituloSalvarAposta">Salve esta aposta :)</string>
    <string name="label_salvar_aposta">Salvar aposta</string>
    <string name="label_de_nome">Dê um nome</string>
    <string name="verCarrinho">_Ver carrinho_\nde apostas</string>
    <string name="added_bet_to_cart">Aposta adicionada ao carrinho com sucesso!</string>
    <string name="verCarrinhoVazio">OK</string>
    <string name="infoValorMinimoCarrinho">Lembre-se: o valor mínimo do total de compras nesse aplicativo é </string>
    <string name="infoConcluaPagamentoBolao">Conclua o pagamento de suas \napostas dentro do prazo</string>
    <string name="tituloApostaFeita">Aposta inserida no \ncarrinho com sucesso.</string>
    <string name="tituloComboFeito">Combo inserido no \ncarrinho com sucesso.</string>
    <string name="tituloBolaoFeito">Bolão inserido no \ncarrinho com sucesso.</string>
    <string name="novaAposta">Fazer nova aposta</string>
    <string name="confirmarApostas">Confira suas apostas e siga para o pagamento</string>
    <string name="confirmacao">Confirmação</string>
    <string name="label_acompanhe_suas_compras">_Ir para_\ncompras</string>
    <string name="label_acompanhe_suas_compras_pix">_Acompanhe_\nsuas compras</string>
    <string name="avancarFormaPagamento">_Avançar_\npara a forma de pagamento</string>
    <string name="fazerNovaAposta">Fazer nova aposta</string>
    <string name="continuarApostando">Continuar apostando</string>
    <string name="adicionarFormaPagamento">_Adicionar_\nforma de pagamento</string>
    <string name="tituloFormaPagamento">Agora é pra valer!</string>
    <string name="infoFormaPagamento">Selecione sua forma de pagamento para prosseguir</string>
    <string name="apostarAutorizarCobranca">_Apostar_\ne autorizar cobrança</string>
    <string name="msg_campos_em_branco">Preencha todos os campos antes de prosseguir.</string>
    <string name="total">Total</string>
    <string name="confirmacaoPagamentoInfoApostasPIX">Acompanhe a situação \ne detalhamento da compra. \nVocê estará concorrendo quando \na APOSTA aparececer como EFETIVADA.</string>
    <string name="confirmacaoPagamentoInfoApostas">Você pode acompanhar a situação da sua compra enquanto ela é processada. Acesse o menu Compras.</string>
    <string name="confirmacaopagamentoParabens">Seu pedido foi realizado com sucesso!</string>
    <string name="confirmacaopagamentoParabensPix">Sua compra está em processamento.</string>
    <string name="compra_sendo_processada">Sua compra está sendo processada</string>
    <string name="confirmacaoPagamentoProcessamento">Estamos processando sua compra.</string>
    <string name="confirmacaoPagamentoProcessamentoInfo1">Para participar dos sorteios, sua aposta precisa estar com status _efetivada_.</string>
    <string name="confirmacaoPagamentoProcessamentoInfo2">Após a conclusão do pagamento, sua aposta será enviada para processamento.</string>
    <string name="confirmacaoPagamentoProcessamentoInfo3">Você pode acompanhar o andamento em _Minhas Compras_.</string>
    <string name="confirmacaoPagamentoProcessamentoInfo4">Se a aposta não for efetivada, o valor será devolvido.</string>
    <string name="minhasApostas">Minhas apostas</string>
    <string name="btn_title_voltarAoInicio">Voltar ao início</string>
    <string name="confirmacaoPagamentoBotaoVoltarInicio">_Voltar_\nao início</string>
    <string name="label_concurso_atual">Informações do concurso atual</string>
    <string name="novaFormaPagamentoTitulo">Cadastrar cartão</string>
    <string name="novaFormaPagamentoNenhumCartaoCadastrado">Notamos que você ainda não possui nenhum cartão de crédito cadastrado. Para continuar, informe:</string>
    <string name="title_activity_main_teste">MainTesteActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_activity_termos_uso">_Termo de uso_</string>
    <string name="title_activity_repasses_sociais">_Repasses sociais_</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_toolbar">_Loterias Caixa_</string>
    <string name="title_activity_login">Login</string>
    <string name="titulo_central_mensagens">Notificações</string>
    <string name="pesquisa_push">Pesquisar</string>
    <string name="pesquisa_push_vazia">Você não possui mensagens</string>
    <string name="pesquisa_push_nao_lida">Você não possui mensagens não lidas</string>
    <string name="msg_push_excluir_todas">Deseja excluir todas as mensagens ?</string>
    <string name="msg_push_excluir">Deseja excluir todas a mensagens ?</string>
    <string name="msg_push_excluir_item">Deseja excluir esta mensagem ?</string>
    <string name="msg_push_marcar_lidas">Deseja marcar todas a mensagens como lidas ?</string>
    <string name="label_concurso">Concurso</string>
    <string name="colunas">Colunas</string>
    <string name="label_rapidao">Rapidão</string>
    <string name="label_resultado">Resultado</string>
    <string name="title_sair">Sair</string>
    <string name="title_minhaArea">Minha área</string>
    <string name="title_lerBilhete">Conferir Bilhete</string>
    <string name="title_repassesSociais">Repasses sociais</string>
    <string name="title_notificacoes">Notificações</string>
    <string name="title_sorteio">Sorteio</string>
    <string name="carrinho_fav_incluir_carrinho">Incluir no carrinho</string>
    <string name="carrinho_fav_segmented_desc">Existem 2 concursos abertos para a {modalidade}.\nDeseja incluir no carrinho qual concurso?</string>
    <string name="placeholder_prognosticos">20-10-3-50-50-09</string>
    <string name="placeholder_titulo">Titulo</string>
    <string name="placeholder_one">One</string>
    <string name="placeholder_two">Two</string>
    <string name="placeholder_three">three</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="time_do_cora_o">Time do coração</string>
    <string name="placeholder_flamengo">FLAMENGO</string>
    <string name="apresentar_trevo">Apresentar trevo</string>
    <string name="ic_outubro_rosa">Outubro Rosa</string>
    <string name="cpf">CPF</string>
    <string name="pronto">Pronto  :)</string>
    <string name="confirmar_carrinho">Agora você só precisa confirmar o seu carrinho de apostas e selecionar a opção _Avançar para forma de pagamento_.</string>
    <string name="aumente_suas_chances">Aumente suas chances de ganhar apostando agora mesmo!</string>
    <string name="situaco">Situação</string>
    <string name="faixa">Faixa</string>
    <string name="valor">Valor</string>
    <string name="title_central_notificacao">Central notificação</string>
    <string name="escolha_chave_pix_restae_premio">Escolha a chave Pix que deseja receber o resgate do prêmio.</string>
    <string name="outra_chave">Outra Chave</string>
    <string name="label_chave">Chave</string>
    <string name="hint_outra_chave">Celular / e-mail / Chave aleatória</string>
    <string name="ciente_resgate_pix">Estou ciente que o resgate de prêmio só poderá ser realizado para uma conta de titularidade do apostador.</string>
</resources>