<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/branco"
    android:paddingTop="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/escolha_chave_pix_restae_premio"
        android:fontFamily="@font/caixa_std_bold"
        android:textSize="14sp"
        android:textColor="@color/blue_caixa"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/radioChave"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/titulo">

        <RadioButton
            android:id="@+id/cpfChave"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/tab_selector"
            android:text="@string/cpf"
            android:button="@null"
            android:textSize="12sp"
            android:fontFamily="@font/caixa_std_bold"
            android:textColor="@color/tab_color"
            android:checked="true"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/outraChave"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:text="@string/outra_chave"
            android:background="@drawable/tab_selector"
            android:textColor="@color/tab_color"
            android:fontFamily="@font/caixa_std_bold"
            android:button="@null"
            android:gravity="center"/>

    </RadioGroup>

    <TextView
        android:id="@+id/labelChave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_chave"
        android:textColor="@color/fonte_resgate"
        android:fontFamily="@font/caixa_std_bold"
        app:layout_constraintTop_toBottomOf="@id/radioChave"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp"/>

    <TextView
        android:id="@+id/txtValorChave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="532329350-01"
        android:fontFamily="@font/caixa_std_bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/labelChave"
        app:layout_constraintTop_toBottomOf="@id/labelChave"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerOutraChave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/labelChave"
        app:layout_constraintStart_toStartOf="@id/labelChave"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtOutraChave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_outra_chave"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_confirmacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caixa_std_regular"
            android:text="@string/ciente_resgate_pix"
            android:textColor="@color/azul_alterar"
            android:lineSpacingExtra="4sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edtOutraChave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
